# projects

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  week3_crewai_free_financial_reseracher.ipynb
1-foundations/: app.py  lab1.ipynb  lab2.ipynb
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md.bak  app.py  requirements.txt
2-openai/: lab2.ipynb  lab3.ipynb
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  lab1.ipynb  lab2.ipynb  lab3.ipynb
3_crew/coder/: pyproject.toml
3_crew/coder/src/coder/: crew.py  main.py
3_crew/coder/src/coder/config/: agents.yaml
3_crew/community_contributions/Book_Researcher/: README.md  pyproject.toml
3_crew/community_contributions/Book_Researcher/output/: top_novelists.md
3_crew/community_contributions/Book_Researcher/src/book/: crew.py  main.py
3_crew/community_contributions/Book_Researcher/src/book/config/: agents.yaml  tasks.yaml
3_crew/community_contributions/resume_match_ai/: pyproject.toml
3_crew/community_contributions/resume_match_ai/src/resume_match_ai/: __init__.py  crew.py  main.py
3_crew/community_contributions/resume_match_ai/src/resume_match_ai/config/: agents.yaml
3_crew/community_contributions/resume_match_ai/src/resume_match_ai/tools/: custom_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  lab1.ipynb  lab2.ipynb  memory.db-shm  memory.db-wal  sidekick.py  sidekick_tools.py
5_autogen/: 1_autogen_agentchat.ipynb  1_lab1_autogen_agentchat.ipynb  2_autogen_core.ipynb  2_lab2_autogen_agentchat.ipynb  3_autogen_distributed.ipynb  3_lab3_autogen_core.ipynb  4_autogen_project.ipynb  4_lab4_autogen_distributed.ipynb  5_lab5_autogen_project copy.ipynb  5_lab5_autogen_project.ipynb  agent.py  agent1.py  agent2.py  agent3.py  agent4.py  creator.py  messages.py  tickets.db  world.py
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  accounts.db  accounts.py  accounts_client.py  accounts_server.py  alpha_client.py  app.py  brave_client.py  client.py  (+16 more)
agents/1_foundation_/community_contributions/novel-generator/: README.md  app.py  file_writer.py  main.py  novel_generator_manager.py  novel_writer_agent.py  pyproject.toml  user_input.py
agents/3_crew/community_contributions/crypto_market/: README.md  pyproject.toml
agents/3_crew/community_contributions/crypto_market/memory/: chroma.sqlite3  long_term_memory_storage.db
agents/3_crew/community_contributions/crypto_market/output/: crypto_research.json  investment_decision.md  risk_assessment.json  trending_cryptos.json
agents/3_crew/community_contributions/crypto_market/src/crypto_market/: crew.py  main.py
agents/3_crew/community_contributions/crypto_market/src/crypto_market/config/: agents.yaml  tasks.yaml
agents/3_crew/community_contributions/engineering_team_with_feedback_loops/: README.md  app.py  pyproject.toml
agents/3_crew/community_contributions/engineering_team_with_feedback_loops/src/engineering_team_using_flow/: main.py  shared_queue.py
agents/3_crew/community_contributions/engineering_team_with_feedback_loops/src/engineering_team_using_flow/crews/engineering_crew/: engineering_crew.py
agents/3_crew/community_contributions/engineering_team_with_feedback_loops/src/engineering_team_using_flow/crews/engineering_crew/config/: agents.yaml  tasks.yaml
agents/3_crew/community_contributions/ghost_writer/: pyproject.toml
agents/3_crew/community_contributions/ghost_writer/src/ghost_writer/: crew.py
agents/3_crew/community_contributions/ghost_writer/src/ghost_writer/config/: tasks.yaml
agents/3_crew/community_contributions/ghost_writer/src/ghost_writer/services/: __init__.py
agents/3_crew/community_contributions/kisali/coder_agent/: README.md  pyproject.toml
agents/3_crew/community_contributions/kisali/coder_agent/src/coder_agent/: crew.py  main.py
agents/3_crew/community_contributions/kisali/coder_agent/src/coder_agent/config/: agents.yaml  tasks.yaml
agents/3_crew/community_contributions/kisali/debate/: README.md  pyproject.toml
agents/3_crew/community_contributions/kisali/debate/output/: decide.md  oppose.md  propose.md
agents/3_crew/community_contributions/kisali/debate/src/debate/: crew.py  main.py
agents/3_crew/community_contributions/kisali/debate/src/debate/config/: agents.yaml  tasks.yaml
agents/3_crew/community_contributions/kisali/financial_researcher/: README.md  pyproject.toml
agents/3_crew/community_contributions/kisali/financial_researcher/output/: report.md
agents/3_crew/community_contributions/kisali/financial_researcher/src/financial_researcher/: crew.py  main.py
agents/3_crew/community_contributions/kisali/financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
agents/3_crew/community_contributions/kisali/stock_picker/: README.md  pyproject.toml
agents/3_crew/community_contributions/kisali/stock_picker/memory/: chroma.sqlite3  long_term_mem_store.db
agents/3_crew/community_contributions/kisali/stock_picker/output/: decision.md  research_report.json  trending_companies.json
agents/3_crew/community_contributions/kisali/stock_picker/src/stock_picker/: crew.py  main.py
agents/3_crew/community_contributions/kisali/stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
agents/3_crew/community_contributions/kisali/stock_picker/src/stock_picker/tools/: push_tool.py
agents/3_crew/community_contributions/kisali/swe_team/: README.md  pyproject.toml
agents/3_crew/community_contributions/kisali/swe_team/src/swe_team/: crew.py  main.py
agents/3_crew/community_contributions/kisali/swe_team/src/swe_team/config/: agents.yaml  tasks.yaml
agents/3_crew/job_task_analysis_manager/: README.md  pyproject.toml
agents/3_crew/job_task_analysis_manager/output/: final-skilling-plan.md  output_trace.txt  run_trace.txt  skilling-plan1.md  skilling-plan2.md  skilling-plan3.md
agents/3_crew/job_task_analysis_manager/src/job_task_analysis/: crew.py  main.py
agents/3_crew/job_task_analysis_manager/src/job_task_analysis/config/: agents.yaml  tasks.yaml
(+592 files in other folders)
