[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "gradio>=5.22.0",
    "ipywidgets>=8.1.5",
    "openai>=1.68.2",
    "openai-agents>=0.0.6",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sendgrid>=6.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
