[project]
name = "job_task_analysis"
version = "0.1.0"
description = "job_task_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
debate = "job_task_analysis.main:run"
run_crew = "job_task_analysis.main:run"
train = "job_task_analysis.main:train"
replay = "job_task_analysis.main:replay"
test = "job_task_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
