[project]
name = "coder_agent"
version = "0.1.0"
description = "coder_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "boto3>=1.34,<2.0"
]

[project.scripts]
coder_agent = "coder_agent.main:run"
run_crew = "coder_agent.main:run"
train = "coder_agent.main:train"
replay = "coder_agent.main:replay"
test = "coder_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
