[project]
name = "swe_team"
version = "0.1.0"
description = "swe_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "boto3>=1.34,<2.0"
]

[project.scripts]
swe_team = "swe_team.main:run"
run_crew = "swe_team.main:run"
train = "swe_team.main:train"
replay = "swe_team.main:replay"
test = "swe_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
